testsuite/tests/properties/invalid_lambda_arg_type/map_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[IndexedItem] =
        node.items.imap((e: Example, i: Bool) => IndexedItem(
            e=e, i=if i then 1 else 0
        ))
}
